--- a/views/partials/custom.ejs
+++ b/views/partials/custom.ejs
@@ -1,64 +1,60 @@
 <div class="mdl-grid" id="product Form">
-            <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-            <div class=" custom-card mdl-card--border mdl-cell mdl-cell--8-col mdl-shadow--8dp">
-                <form method="post" action="/custom" enctype="multipart/form-data" style="background: #f5e5f8;">
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input id="custName" class="mdl-textfield__input clearable darker"
-                   type="text" required>
-                   <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-            <label class="mdl-textfield__label darker" for="custName">Name</label>
-        </div>
-        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-<input pattern="\d{4}$" id="custVintage" class="mdl-textfield__input clearable darker"
-       type="text">
-       <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-<label class="mdl-textfield__label darker" for="custVintage">Vintage</label>
-</div>
-                    <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input id="custRegion" class="mdl-textfield__input clearable darker"
-                   type="text">
-                   <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-            <label class="mdl-textfield__label darker" for="custRegion">Region</label>
-        </div>
-        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input id="custWinery" class="mdl-textfield__input clearable darker"
-                   type="text">
-                   <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-            <label class="mdl-textfield__label darker" for="custWinery">Winery</label>
-        </div>
-        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input id="custBlend" class="mdl-textfield__input clearable darker"
-                   type="text">
-                   <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-            <label class="mdl-textfield__label darker" for="custBlend">Blend</label>
-        </div>
-        <br>        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input pattern="^\$?\d+(\.\d{2})?$" id="custPrice" class="mdl-textfield__input clearable darker"
-                   type="text">
-                   <button class="clear" type="reset">
-        <i class="material-icons">cancel</i>
-      </button>
-            <label class="mdl-textfield__label darker" for="custPrice">Price</label>
-        </div>
-        <br>
-
- 
-
-        <div class="pad-left">
+    <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+    <div class=" custom-card mdl-card--border mdl-cell mdl-cell--8-col mdl-shadow--8dp">
+        <form method="post" action="/custom" style="background: #f5e5f8;">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="name" id="custName" class="mdl-textfield__input clearable darker" type="text" required>
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custName">Name</label>
+            </div>
+            <br>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="vintage" pattern="\d{4}$" id="custVintage" class="mdl-textfield__input clearable darker" type="text">
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custVintage">Vintage (YYYY)</label>
+            </div>
+            <br>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="region" id="custRegion" class="mdl-textfield__input clearable darker" type="text">
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custRegion">Region</label>
+            </div>
+            <br>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="winery" id="custWinery" class="mdl-textfield__input clearable darker" type="text">
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custWinery">Winery</label>
+            </div>
+            <br>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="blend" id="custBlend" class="mdl-textfield__input clearable darker" type="text">
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custBlend">Grape Blend</label>
+            </div>
+            <br>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                <input name="price" pattern="^\$?\d+(\.\d{2})?$" id="custPrice" class="mdl-textfield__input clearable darker" type="text">
+                <button class="clear" type="reset">
+                    <i class="material-icons">cancel</i>
+                </button>
+                <label class="mdl-textfield__label darker" for="custPrice">Price (XX.XX)</label>
+            </div>
+            <br>
+            <div class="pad-left">
                 <button name="submitButton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-upgraded=",MaterialButton,MaterialRipple">Submit<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></button>
                 <button name="resetButton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-upgraded=",MaterialButton,MaterialRipple">Reset<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></button>
-        </div>
-        <br>
+            </div>
+            <br>
         </form>
-        </div>
-        </div>>
+    </div>
+</div>
